tests/errors/invalid_hex_escape0.pyx
# mode: error

'\x'

_ERRORS = '''
3:1: Invalid hex escape '\x'
'''
